--- a/CS_Form/CS_Form/CS_Form.csproj
+++ b/CS_Form/CS_Form/CS_Form.csproj
@@ -55,9 +55,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test Label.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TestButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TestTextBox.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
