--- a/CS_Form/CS_Form/CS_Form.csproj
+++ b/CS_Form/CS_Form/CS_Form.csproj
@@ -61,7 +61,9 @@
     <Compile Include="TestButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="TestTextBox.cs" />
+    <Compile Include="TestTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
